chore: Configure full workspace permissions for autonomous operation

--- a/.gitignore
+++ b/.gitignore
@@ -111,6 +111,7 @@ coverage.xml
 # --------------------------------------------
 .claude/
 !.claude/skills/
+!.claude/settings.json
 
 # --------------------------------------------
 # Logs & Temp Files
